--- a/assign_2.ipynb
+++ b/assign_2.ipynb
@@ -2,6 +2,16 @@
   "cells": [
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/eebeohar/stock_predict/blob/main/assign_2.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
       "source": [
         "#Libraries"
       ],
@@ -11,7 +21,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": null,
       "metadata": {
         "id": "bGECBh2y7Tgx"
       },
@@ -33,7 +43,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "id": "jB0yw0T_igCc"
       },
@@ -45,7 +55,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "metadata": {
         "id": "cIdFw7UHK-o6",
         "colab": {
@@ -435,7 +445,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "metadata": {
         "id": "m_0HeWeF6Z2j"
       },
@@ -447,7 +457,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": null,
       "metadata": {
         "id": "hqpYMv1-q5ak",
         "colab": {
@@ -493,7 +503,7 @@
         "id": "ldBEhzZCWHK_",
         "outputId": "53075587-dd99-4313-c988-76863b8ab6c8"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -795,7 +805,7 @@
         "plt.gca().spines[['top', 'right',]].set_visible(False)"
       ],
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -832,7 +842,7 @@
         "plt.gca().spines[['top', 'right']].set_visible(False)"
       ],
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -878,7 +888,7 @@
         "id": "C1YoK8PwL4xV",
         "outputId": "85908711-43d7-4c63-90b0-4eb427c709de"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -902,7 +912,7 @@
       "metadata": {
         "id": "HsOxxPP7Nkw7"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -932,7 +942,7 @@
         "id": "KJJAVj57Nxqd",
         "outputId": "214e7459-57ec-4612-af54-f127330c25e5"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -959,7 +969,7 @@
         "id": "IqynDjdNQiby",
         "outputId": "a49ddf95-e0ea-4bec-ac78-78d97a5cc008"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -991,7 +1001,7 @@
       "metadata": {
         "id": "0yiwzswMPe7b"
       },
-      "execution_count": 53,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1013,7 +1023,7 @@
         "id": "sr5Gg_vJT1g_",
         "outputId": "640245fa-4778-441f-8e1f-4b591e66f132"
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1068,7 +1078,7 @@
         "id": "Y1kS9JlBZfLU",
         "outputId": "40daf776-9f8d-4b76-b23d-483cad392f2f"
       },
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1122,7 +1132,7 @@
         "id": "oj1IgTlOilyh",
         "outputId": "34f714c6-5329-45b7-f9fa-e3e665c8e598"
       },
-      "execution_count": 47,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1159,7 +1169,7 @@
         "id": "cnY20pKIX9P9",
         "outputId": "6ab22ccf-68f9-4414-c3bd-1498a0b1790a"
       },
-      "execution_count": 54,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1177,7 +1187,7 @@
       "metadata": {
         "id": "qmfgK89JZYw8"
       },
-      "execution_count": 48,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1197,7 +1207,7 @@
         "id": "oF_bv8vedGNW",
         "outputId": "aa6e10ac-08c4-4cc7-9bf7-c8fd7209bfcc"
       },
-      "execution_count": 49,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1238,7 +1248,7 @@
         "id": "TCOcGUDbcv6B",
         "outputId": "3f5ac884-0d80-4577-e70e-91e04f5be0e4"
       },
-      "execution_count": 52,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1368,7 +1378,7 @@
       "metadata": {
         "id": "4A0kpwTeOvp3"
       },
-      "execution_count": 55,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1380,7 +1390,7 @@
       "metadata": {
         "id": "YX7Nqk3hqN3J"
       },
-      "execution_count": 56,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1395,7 +1405,7 @@
         "id": "25uB4y1a4BMR",
         "outputId": "7babc929-2456-49d8-c71b-162fffc3d3e2"
       },
-      "execution_count": 60,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1418,7 +1428,7 @@
       "metadata": {
         "id": "DjRv9JuBeuw-"
       },
-      "execution_count": 65,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1434,7 +1444,7 @@
         "id": "p-QbSPOwfIfl",
         "outputId": "1c137525-433c-4fb4-c6ae-073377f9c28c"
       },
-      "execution_count": 72,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1913,7 +1923,7 @@
         "id": "Si0V5R7zqV1l",
         "outputId": "b0e8f0e1-abfd-47e6-e8b7-2c171d62d01b"
       },
-      "execution_count": 91,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1939,7 +1949,10 @@
   ],
   "metadata": {
     "colab": {
-      "provenance": []
+      "provenance": [],
+      "mount_file_id": "1M0lXB-De7AUv0vZzZtH0Pt0eKDLAmYt9",
+      "authorship_tag": "ABX9TyP6TISlFs5LKuGkIqhU5Koe",
+      "include_colab_link": true
     },
     "kernelspec": {
       "display_name": "Python 3",
